--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background-color: #212121; 
+            color: white;  
+            padding-left: 20px;
+            padding-top: 10px;
+        }
+
+    </style>
 </head>
 
 <body>
-    <p>Hello</p>
+    <h3>Hello</h3>
+    <form method="post" action="/">
+        <div>
+            <label for="message"></label>Enter your message:<br>
+            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        </div>
+        <button type="submit" style="margin-top: 5px;">Save me</button>
+    </form>
+
 </body>
 
 </html>
